first draft intro

--- a/deviant.bib
+++ b/deviant.bib
@@ -24,7 +24,8 @@
   eprint    = {2109.14883},
   timestamp = {Mon, 04 Oct 2021 17:22:25 +0200},
   biburl    = {https://dblp.org/rec/journals/corr/abs-2109-14883.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  note = {Submitted for publication}
 }
 
 @inproceedings{DBLP:conf/bpm/SlaatsDB21,
