--- a/main.tex
+++ b/main.tex
@@ -6,14 +6,14 @@
 %
 \usepackage{graphicx}
 \usepackage{amssymb,amsmath}
-\usepackage{todonotes}
+\usepackage{todonotes}[inline]
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{multirow}
 \usepackage{xspace}
 \usepackage{booktabs}
 \usepackage{siunitx}
-%\usepackage{pgfplots}
+\usepackage[inline,shortlabels]{enumitem}
 \usepackage{subcaption}
 \usepackage{caption}
 \usepackage{bold-extra}
@@ -22,7 +22,8 @@
 \usepackage{booktabs}
 \usepackage{newtxtext}
 
-
+\newcommand{\nd}{\texttt{NegDis}\xspace}
+\newcommand{\declare}{\texttt{Declare}\xspace}
 
 \usepackage{longtable,tabulary}
 
