--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,9 @@
 \usepackage{rotating}
 \usepackage{xcolor,colortbl}
 \usepackage{booktabs}
-\usepackage{newtxtext}
+\usepackage[nolist]{acronym}
+%\usepackage{newtxtext}
+
 
 \newcommand{\nd}{\texttt{NegDis}\xspace}
 \newcommand{\declare}{\texttt{Declare}\xspace}
