--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -19,7 +19,7 @@ Several declarative process discovery approaches have been proposed in the liter
 %Similarly to our technique, the one exposed by Maggi et al. 
 The approach in~\cite{2011-Maggi} starts by considering the set of all activities in the log and building a set of all possible candidate Declare constraints. %That work stems from the idea that Apriori-like approaches---such as sequence mining~\cite{1994-Agrawal} and episode mining \cite{1997-Mannila}---can discover local patterns in a log, but not rules representing prohibited behaviours and choices. Therefore, differently from our algorithm, the candidate Declare constraints are then translated into the equivalent \ac{LTL} and checked (one at a time) against all the log content employing the technique of \cite{2005-Aalst}.
  The process continue until certain levels of recall and specificity are reached. The performance of this technique is improved in \cite{2012-Maggi} with an interesting two-step approach to both reduce the search space of candidate constraints and exclude from the model those \ac{LTL} formulas that are vacuously satisfied.
-Also the work \cite{2012-Schunselaar} by Schunselaar et al. proposes a model refinement to efficiently exclude vacuously satisfied constraints. %Interestingly, instead of learning the model from the structure of a single trace, this approach works on sets of traces in the event log.
+Also the work by Schunselaar et al. \cite{2012-Schunselaar} proposes a model refinement to efficiently exclude vacuously satisfied constraints. %Interestingly, instead of learning the model from the structure of a single trace, this approach works on sets of traces in the event log.
 The MINERFul approach described in \cite{2015-DiCiccio} proposes to employ four metrics to guide the declarative discovery approach: support, confidence and interest factor for each constraint w.r.t. the log, and the possibility to include in the search space constraints on prohibited behaviours.
 The work by Di Ciccio et al. \cite{2017-DiCiccio} focuses on refining Declare models to remove the frequent redundancies and inconsistencies. 
 %The algorithms and the hierarchy of constraints described in that work were particularly inspiring to define our discovery procedure.
