--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,6 @@
 \documentclass[runningheads]{llncs}
 %
 \usepackage{graphicx}
-\usepackage{amssymb,amsmath}
 \usepackage{todonotes}[inline]
 \usepackage{hyperref}
 \usepackage{array}
@@ -23,6 +22,20 @@
 \usepackage[nolist]{acronym}
 %\usepackage{newtxtext}
 
+%%%
+\usepackage{amssymb,amsmath}
+%\usepackage{amsthm}
+
+%\theoremstyle{definition}
+%\newtheorem{definition}{Definition}[section]
+%\newtheorem{theorem}{Theorem}[section]
+%\newtheorem{lemma}{Lemma}[section]
+%\newtheorem{remark}{Remark}[section]
+
+%\theoremstyle{plain}
+%\newtheorem{example}{Example}[section]
+%%%
+
 
 \newcommand{\nd}{\texttt{NegDis}\xspace}
 \newcommand{\declare}{\texttt{Declare}\xspace}
@@ -36,6 +49,8 @@
 
 
 \newcommand\btext[1]{{\color{blue}{#1}}}
+
+\newcommand{\todofc}[1]{\todo[backgroundcolor=yellow,size=\tiny]{FC: #1}}
 
 
 % Used for displaying a sample figure. If possible, figure files should
